--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const visualisations = [
   {
     title: "Carte Interactive Gares",
     description: "Carte choroplèthe des gares ouvertes par département avec visualisation dynamique",
-    link: "/carte-gares",
+    link: "/densite",
     icon: "🗾"
   },
   {
